--- a/apps/recibos/templates/recibos/dashboard.html
+++ b/apps/recibos/templates/recibos/dashboard.html
@@ -32,7 +32,7 @@
                 App Recibos
             </a>
             <div class="flex items-center space-x-4">
-                <a href="{% url 'base' %}"
+                <a href="{% url 'home' %}"
                     class="p-2 text-sm font-medium text-white bg-indigo-600 rounded-full hover:bg-indigo-700 transition duration-150 shadow-md flex items-center">
 
                     <i class="fas fa-home"></i>
